// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 69,
  "sha": "f412958c1f23ccb6",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 27,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 83,
  "sha": "e6668d559a7779b1",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 19,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 62,
  "sha": "ad1f9c8b847231e1",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 22,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 67,
  "sha": "a704514f84d45e88",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "0a846f87884948d0",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 23,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 69,
  "sha": "551a31b54bd898ef",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 78,
  "sha": "5e2047b99c734c50",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 27,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 76,
  "sha": "6451f3e837a2b6ef",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 73,
  "sha": "473111a6ad9db1c4",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 40,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 95,
  "sha": "35f9513d5353f7e3",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "d899665f6cce0115",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 20,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 63,
  "sha": "7d0365ec5aae7350",
  "svgs": 1,
}
`;
